# inria-slides-2024-02-20

./: Cargo.toml  slides.typ
src/: main.rs
